--- a/desafios/desafio012/estilo/style.css
+++ b/desafios/desafio012/estilo/style.css
@@ -22,7 +22,7 @@ html, body{
 }
 
 header{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     color: white;
     text-align: center;
 }
@@ -56,6 +56,10 @@ section{
     font-size: 3.5vw;
 }
 
+section > p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -64,13 +68,27 @@ section.normal{
 section.imagem{
     background-color: black;
     color: white;
+    box-shadow: 6px 6px 13px 0px rgba(0, 0, 0, 0.726);
+    background-attachment: fixed;
 }
 
 section.imagem > p{
-    background-color: rgba(0, 0, 0, 0.395);
+    background-color: rgba(0, 0, 0, 0.49);
     display: inline-block;
     padding: 5px;
+    text-shadow: 2px 2px 0px black;
 
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-size: cover;
 }
 
 footer{
